	- separated project output folders in Visual Studio
	- also compile mame_regtest Release as C++
	- avoid warning about unreachable code with Visual Studio Release build
	- added split_string() to common.c/.h
	- added free_array() to common.c/.h
	- updated default "valgrind_parameters"
		- removed "--leak-resolution=med" since the valgrind default is now "high"
		- added "--track-origins=yes"
	- added "pngcmp" for PNG comparison
	- fixed "start_at" example in default configuration
	- added get_directory() to common.c/.h
	- changed "device_mandatory" from integer to string
	- added option "hack_softwarelist" to work around broken -listsoftware
	- use the first matching interface when using softwarelists
	- fixed memory leaks when using softwarelists
	- fixed driver being executed multiple times without a device when the softwarelist entries don't match any interface
	- use first matching interface when using softwarelists
	- add command-line to output XML
	- added replace_string() to common.c/.h
	- replaced convert_xpath_expr() with replace_string() and got rid of xpath_placeholder_size
	- added allocation logging in LOG_ALLOC define
	- small cleanup to config_read_option_str_ptr()
	- renamed made "driv_inf" from main() global and renamed to "global_driv_inf"
	- moved cleanup_driver_info_list() call to cleanup_and_exit() to avoid leaks in case of premature exit
	- fixed parsing of dipswitches and configurations - only the first one was tested and the others were leaked
	- fixed memory leaks with dipswitches and configurations
	
	create_report
	- added a summary at the end when "dokuwiki_format" is set
	- added support for multiple input folders (separated by ';')
	- updated comparison report to invoke pngcmp and output in HTML
	- added option "output_folder" for comparison reports
	- skip *_listsoftware.xml files
	- added option "recursive"
	- added header to docuwiki format
	- added command-line to docuwiki format